--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
-server.port=9090
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/full-stack-ecommerce?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=ecommerceapp
-spring.datasource.password=123456
-
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
-spring.data.rest.base-path=/api
+server.port=1234
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
+spring.datasource.username=midhu
+spring.datasource.password=midhu25
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
